// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hue Light API /api/hue/lights GET should return all lights 1`] = `
Array [
  Object {
    "id": "1",
    "manufacturername": "Philips",
    "modelid": "LCT001",
    "name": "MOCK",
    "roomId": "0fc1d78e-fd1c-4717-b610-65d2fa3d01b2",
    "state": Object {
      "alert": "none",
      "bri": 163,
      "colormode": "xy",
      "ct": 272,
      "effect": "none",
      "hue": 15736,
      "on": true,
      "reachable": true,
      "sat": 32,
      "xy": Array [
        0.3969,
        0.3851,
      ],
    },
    "type": "Extended color light",
  },
  Object {
    "id": "2",
    "manufacturername": "Philips",
    "modelid": "LCT001",
    "name": "JEST",
    "roomId": "0fc1d78e-fd1c-4717-b610-65d2fa3d01b3",
    "state": Object {
      "alert": "none",
      "bri": 97,
      "colormode": "xy",
      "ct": 272,
      "effect": "none",
      "hue": 17161,
      "on": false,
      "reachable": true,
      "sat": 38,
      "xy": Array [
        0.3978,
        0.3883,
      ],
    },
    "type": "Extended color light",
  },
]
`;

exports[`Hue Light API api/hue/lights/:id_light GET should return a light 1`] = `
Object {
  "manufacturername": "Philips",
  "modelid": "LCT001",
  "name": "MOCK",
  "roomId": "0fc1d78e-fd1c-4717-b610-65d2fa3d01b3",
  "state": Object {
    "alert": "none",
    "bri": 163,
    "colormode": "xy",
    "ct": 272,
    "effect": "none",
    "hue": 15736,
    "on": false,
    "reachable": true,
    "sat": 32,
    "xy": Array [
      0.3969,
      0.3851,
    ],
  },
  "type": "Extended color light",
}
`;

exports[`Hue Light API api/hue/lights/:id_light PATCH should update the name of the light 1`] = `
Object {
  "body": Object {
    "name": "test",
  },
}
`;

exports[`Hue Light API api/hue/lights/:id_light PATCH should update the roomId and the name 1`] = `
Object {
  "body": Object {
    "name": "test_room",
  },
}
`;

exports[`Hue Light API api/hue/lights/:id_light/:status should call requestService with on to false 1`] = `
Object {
  "on": false,
}
`;

exports[`Hue Light API api/hue/lights/:id_light/:status should call requestService with on to true 1`] = `
Object {
  "on": true,
}
`;

exports[`Hue Light API api/hue/lights/:id_light/state should call requestService with body passed 1`] = `
Object {
  "bri": 25,
  "on": true,
  "sat": 200,
  "xy": Array [
    23,
    45,
  ],
}
`;
